@@ -44,11 +44,11 @@ using System.Runtime.InteropServices;
 [assembly: ComVisible (false)]
 
 [assembly: AssemblyVersion (
-	// 
+	//
 	// DO NOT MODIFY THE STRING BELOWS WITOUT UPDATING cecil.pc.in in mono/data
 	//
 	"0.6.8.8607"
-	// 
+	//
 	// DO NOT MODIFY THE STRING ABOVE WITHOUT UPDATING cecil.pc.in in mono/data
 )]
 
